--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
-max_simulation_steps=1000000
+max_simulation_steps=100000000
+base_steps=10000
 paper_width=2100
 paper_height=2100
 reset_view_hotkey=control R
