--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,4 +2,4 @@ max_simulation_steps=10000000
 base_steps=10000
 paper_width=2100
 paper_height=2100
-designColor.secondary_hex=#7e3cb7
+designColor.secondary_hex=#1e1852
