--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
             <artifactId>json</artifactId>
             <version>20220924</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fifesoft</groupId>
+            <artifactId>rsyntaxtextarea</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
 
